--- a/resources/css/components/_tree-view.scss
+++ b/resources/css/components/_tree-view.scss
@@ -113,7 +113,7 @@
 .tree-item-info {
     display: flex;
     align-items: center;
-    gap: 0.75rem;
+    gap: 0;
     flex: 1;
     min-width: 0;
 }
