--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -20,6 +20,7 @@
 @use './components/media-field';
 @use './components/fieldset';
 @use './components/fieldset-cards';
+@use './components/drag-handle';
 @use './components/tree-view';
 @use './components/sortable-table';
 @use './components/cropper';
