--- a/resources/css/content/_tables.scss
+++ b/resources/css/content/_tables.scss
@@ -20,7 +20,7 @@
 }
 
 .table thead th {
-    font-weight: 400; /* Thinner font weight */
+    font-weight: 700;
     color: #777;
     background-color: #efefef; /* Header background color */
     border-bottom: 1px solid #ddd; /* Horizontal divider */
