Update Settings panel styles: remove display block and add form-group margin

--- a/resources/css/content/_panels.scss
+++ b/resources/css/content/_panels.scss
@@ -81,12 +81,15 @@
 span.config-help {
     color: #2a8dea;
     font-size: 12px;
-    display: block;
     margin-top: 5px;
 
     i {
         color: #e01313;
         font-style: normal;
     }
+}
+
+.form-group {
+    margin-bottom: 25px;
 }
 
