--- a/resources/css/content/_panels.scss
+++ b/resources/css/content/_panels.scss
@@ -71,6 +71,7 @@
         padding: 10px 20px;
         margin: 0 0 15px 0;
         border-radius: 2px;
+        font-weight: 300;
 
         i {
             margin-right: 10px;
