--- a/resources/css/content/_panels.scss
+++ b/resources/css/content/_panels.scss
@@ -225,15 +225,11 @@ input[type=file] {
 // ============================================
 
 .form-actions {
-    padding: 15px 20px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #e4eaec;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    padding: 0;
     display: flex;
     justify-content: flex-end;
     gap: 10px;
-    margin-bottom: 22px;
+    margin-bottom: 2rem;
 
     .btn {
         margin: 0;
