--- a/resources/css/components/_tree-view.scss
+++ b/resources/css/components/_tree-view.scss
@@ -30,10 +30,10 @@
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    padding: 0.55rem;
+    padding: 0.50rem;
     background: #f7f7f7;
     border: 1px solid #cbcbcb;
-    border-radius: 0.5rem;
+    border-radius: 3px;
     transition: all 0.2s ease;
     min-height: 3rem;
 
