--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -25,6 +25,8 @@
 
     // Text colors
     --ave-color-text: #27323f;
+    --ave-color-link: #337ab7;
+    --ave-color-link-hover: #1f5b8d;
 
     // Gray scale (used for hamburger, caret, muted text)
     --ave-color-gray: #76838F;
