--- a/resources/css/components/_tree-view.scss
+++ b/resources/css/components/_tree-view.scss
@@ -37,8 +37,7 @@
     transition: all 0.2s ease;
 
     &:hover {
-        border-color: #3490dc;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        border-color: #999999a6;
     }
 }
 
