Rename icon library to Compass

--- a/resources/css/content/_icon-library.scss
+++ b/resources/css/content/_icon-library.scss
@@ -1,4 +1,4 @@
-// Icon Library page styles replicated from Voyager Compass demo
+// Compass page styles replicated from Voyager demo
 .icon-library-page {
     h2 {
         margin-top: 0;
