Add toast notification for table deletion and fix table name link styling
- Use session toast flash for success message after table deletion
- Add .table-name-link CSS class for table name links
- Set proper link color using CSS variable --ave-color-link
- Remove inline styles in favor of proper CSS architecture

--- a/resources/css/content/_tables.scss
+++ b/resources/css/content/_tables.scss
@@ -88,6 +88,15 @@
     }
 }
 
+.table-name-link {
+    color: var(--ave-color-link);
+    font-weight: normal;
+
+    &:hover {
+        color: var(--ave-color-link-hover);
+    }
+}
+
 .boolean-column {
     .ave-inline-toggle--dot {
         border: none;
