--- a/resources/css/utilities/_helpers.scss
+++ b/resources/css/utilities/_helpers.scss
@@ -140,3 +140,9 @@
     margin-left: 0;
     margin-right: 0;
 }
+
+// Flexbox utilities
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
