Fix: Use system custom checkbox styles for table columns
Replace plain checkboxes with system custom checkbox component:
- Add checkbox-column class to td
- Use checkbox-label, checkbox-input, checkbox-custom classes
- Use checkbox-custom--sm for small checkboxes
- Generate unique IDs for proper label-input association
- Center checkboxes in column with text-align: center

Now matches system checkbox styling used throughout Ave admin panel.

--- a/resources/css/components/_database-manager.scss
+++ b/resources/css/components/_database-manager.scss
@@ -74,12 +74,9 @@
         // form-control styles will be applied via class
     }
 
-    input[type="checkbox"] {
-        width: 16px;
-        height: 16px;
-        margin: 0 auto;
-        display: block;
-        cursor: pointer;
+    // Checkbox column - use system custom checkbox styles
+    td.checkbox-column {
+        text-align: center;
     }
 
     .btn-square {
