--- a/resources/css/dashboard/_sidebar.scss
+++ b/resources/css/dashboard/_sidebar.scss
@@ -282,12 +282,16 @@
     padding-left: 30px;
 }
 
+.ave-sidebar__submenu-list--level-2 .ave-sidebar__toggle {
+    padding-left: 30px;
+}
+
 .ave-sidebar__submenu-list--level-3 .ave-sidebar__submenu-link {
-    padding-left: 40px;
+    padding-left: 50px;
 }
 
 .ave-sidebar__submenu-list--level-4 .ave-sidebar__submenu-link {
-    padding-left: 50px;
+    padding-left: 70px;
 }
 
 // ============================================
