--- a/resources/css/utilities/_helpers.scss
+++ b/resources/css/utilities/_helpers.scss
@@ -146,3 +146,14 @@
     display: flex;
     justify-content: center;
 }
+
+.flex-start {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
